--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "akhib-portfolio-timeline",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://akhibumear.github.io/akhib-portfolio",
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@react-three/drei": "^9.88.13",
@@ -18,6 +19,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -43,6 +46,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2"
   },
